# mr-project

./: .gitignore  README.md  main.py  pyproject.toml
backend/: alembic.ini  main.py  pyproject.toml
backend/app/: app.py
backend/app/auth/: manager.py
backend/app/models/: __init__.py  order.py  product.py  review.py  user.py
backend/app/routes/: routes.py
backend/app/routes/v1/: auth.py  hidden.py  main.py
backend/core/: database.py  enums.py  env.py  settings.py
backend/interfaces/: cores.py
backend/migrations/: env.py
backend/migrations/versions/: 30645c902289_.py  e205f55efb02_.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/routes/: __root.tsx  _layout.tsx  login.tsx
