[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi-users[oauth,sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "scalar-fastapi>=1.0.3",
]
